@@ -47,6 +47,7 @@ my $mod = 'TAP::Parser::Iterator::Process';
     });
     $harness->runtests('t/sample-tests/simple');
     my @output = tied($$capture)->dump;
+    is pop @output, "Result: PASS\n", 'status OK';
     pop @output;                              # get rid of summary line
     is( $output[-1], "All tests successful.\n", 'ran with no fork' );
 }
